--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "jest": "^29.3.1",
     "mongoose": "^6.7.2",
     "nodemon": "^2.0.15"
   },
   "scripts": {
     "serve": "nodemon ./server/index.js"
+  },
+  "devDependencies": {
+    "supertest": "^6.3.1"
   }
 }
